--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #ffe6e6;
+    background-color: #a7a7a7;
     display: flex;
     justify-content: center;
     align-items: center;
